# nimble

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
resources/: syntax_definitions.packdump
src/: buffer.rs  cursor.rs  editor.rs  graphics_context_macos.rs  graphics_context_windows.rs  language_server.rs  language_server_types.rs  language_support.rs  main.rs  piece_table.rs  platform_resources.rs  platform_resources_macos.rs  platform_resources_windows.rs  renderer.rs  syntect.rs  text_utils.rs  theme.rs  tree_sitter.rs  user_interface.rs  view.rs
