[package]
name = "nimble"
version = "0.1.0"
edition = "2021"

[dependencies]
bstr = "1.4.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
tree-sitter = "0.20.10"
tree-sitter-highlight = "0.20.1"
tree-sitter-c = "0.20.2"
tree-sitter-rust = "0.20.3"
tree-sitter-python = "0.20.2"
winit = "0.28.3"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.46.0", features = [
        "Win32_Graphics_Direct2D",
        "Win32_Graphics_Direct2D_Common", 
        "Win32_Graphics_DirectWrite",
        "Win32_Graphics_Dxgi",
        "Win32_Graphics_Dxgi_Common",
        "Win32_Foundation", 
        "Win32_System_Com",
        "Win32_System_DataExchange",
        "Win32_System_Memory",
        "Win32_UI_WindowsAndMessaging",
        "Win32_UI_Shell",
        "Foundation_Numerics" ] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9.3"
core-graphics = "0.22.3"
core-text = "19.2.0"
objc = "0.2.7"

[profile.relwithdebinfo]
inherits = "release"
debug = true
