[package]
name = "nimble"
version = "0.1.0"
edition = "2021"

[dependencies]
bstr = "1.4.0"
imgui = { version = "0.11.0", features = ["docking"] }
imgui-winit-support = "0.11.0"
proc-macro2 = "1.0.60"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
syntect = { version = "5.0.0", default-features = false, features = ["default-syntaxes", "parsing", "regex-onig"]}
url = "2.3.1"
walkdir = "2.3.3"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.46.0", features = [
        "Win32_Graphics_Direct2D",
        "Win32_Graphics_Direct2D_Common", 
        "Win32_Graphics_Direct3D11",
        "Win32_Graphics_Direct3D",
        "Win32_Graphics_Direct2D_Common", 
        "Win32_Graphics_DirectWrite",
        "Win32_Graphics_Dxgi",
        "Win32_Graphics_Dxgi_Common",
        "Win32_Graphics_Gdi",
        "Win32_Globalization",
        "Win32_Foundation", 
        "Win32_Security", 
        "Win32_System_Com",
        "Win32_System_DataExchange",
        "Win32_System_Pipes",
        "Win32_System_Memory",
        "Win32_System_Threading",
        "Win32_UI_Input_KeyboardAndMouse",
        "Win32_UI_Shell",
        "Win32_UI_WindowsAndMessaging",
        "Foundation_Numerics" ] }